@@ -1,6 +1,6 @@
 Package: RItools
-Version: 0.1-10
-Date: 2010-08-05
+Version: 0.1-11
+Date: 2010-03-04
 Title: Randomization inference tools
 Author: Jake Bowers <jwbowers@illinois.edu>, Mark Fredrickson
         <mark.m.fredrickson@gmail.com>, and Ben Hansen
@@ -14,6 +14,6 @@ Suggests: optmatch, xtable
 Enhances: optmatch, xtable
 URL: http://CRAN.R-project.org/package=RItools,
         http://www.jakebowers.org/RItools.html
-Packaged: 2010-09-23 03:11:22 UTC; jwbowers
+Packaged: 2011-03-04 17:32:42 UTC; jwbowers
 Repository: CRAN
-Date/Publication: 2010-09-23 06:13:56
+Date/Publication: 2011-03-05 16:39:38
